@@ -27,6 +27,7 @@ _tss:*:28:
 _gpio:*:29:
 _rtadvd:*:30:
 guest:*:31:root
+_unbound:*:32:
 nobody:*:39:
 utmp:*:45:
 authpf:*:72:
