@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $NetBSD: postinstall,v 1.202 2016/01/30 23:45:37 christos Exp $
+# $NetBSD: postinstall,v 1.203 2016/08/20 11:24:13 christos Exp $
 #
 # Copyright (c) 2002-2015 The NetBSD Foundation, Inc.
 # All rights reserved.
@@ -1045,7 +1045,8 @@ do_gid()
 	check_ids "$1" groups "${DEST_DIR}/etc/group" \
 	    "${SRC_DIR}/etc/group" 14 \
 	    named ntpd sshd SKIP _pflogd _rwhod staff _proxy _timedc \
-	    _sdpd _httpd _mdnsd _tests _tcpdump _tss _gpio _rtadvd
+	    _sdpd _httpd _mdnsd _tests _tcpdump _tss _gpio _rtadvd SKIP \
+	    _unbound
 }
 
 #
@@ -1481,6 +1482,20 @@ sdpd sdpd_username
 sysctl defcorename
 "
 
+populate_rc()
+{
+	local op=$1
+	local dir=$2
+	local name=$3
+	local rcdir=$4
+	if ! find_file_in_dirlist "${name}" "${name}" \
+	    "${rcdir}" "${SRC_DIR}/etc/rc.d"; then
+		return 1
+	fi
+	populate_dir "${op}" true "${dir}" "${DEST_DIR}/etc/rc.d" 555 "${name}"
+	return $?
+}
+
 additem rc "/etc/rc* and /etc/rc.d/ being up to date"
 do_rc()
 {
@@ -1507,15 +1522,13 @@ do_rc()
 		${extra_scripts}
 	failed=$(( ${failed} + $? ))
 
-	if ! find_file_in_dirlist blacklistd "blacklistd" \
-	    "${SRC_DIR}/external/bsd/blacklist/etc/rc.d" \
-	    "${SRC_DIR}/etc/rc.d"; then
-	    failed=1
-	else
-	    populate_dir "$op" true "${dir}" "${DEST_DIR}/etc/rc.d" 555 \
-		blacklistd
-	    failed=$(( ${failed} + $? ))
-	fi
+	populate_rc "${op}" "${dir}" blacklistd \
+	    "${SRC_DIR}/external/bsd/blacklist/etc/rc.d"
+	failed=$(( ${failed} + $? ))
+
+	populate_rc "${op}" "${dir}" unbound \
+	    "${SRC_DIR}/external/bsd/unbound/etc/rc.d"
+	failed=$(( ${failed} + $? ))
 
 	if $SOURCEMODE && [ -n "${generated_scripts}" ]; then
 		# generate scripts
@@ -1864,7 +1877,8 @@ do_uid()
 	check_ids "$1" users "${DEST_DIR}/etc/master.passwd" \
 	    "${SRC_DIR}/etc/master.passwd" 12 \
 	    postfix SKIP named ntpd sshd SKIP _pflogd _rwhod SKIP _proxy \
-	    _timedc _sdpd _httpd _mdnsd _tests _tcpdump _tss SKIP _rtadvd
+	    _timedc _sdpd _httpd _mdnsd _tests _tcpdump _tss SKIP _rtadvd \
+	    SKIP _unbound
 }
 
 
